--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "mukto90/ncrypt": "dev-master",
         "jstayton/google-maps-geocoder": "^2.4",
         "slim/pdo": "^1.10",
-        "cloudinary/cloudinary_php": "^1.13"
+        "cloudinary/cloudinary_php": "^1.13",
+        "rakit/validation": "^1.1"
     },
     "autoload": {
         "psr-4": {
