added  a text editor for debugging

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "slim/pdo": "^1.10",
         "cloudinary/cloudinary_php": "^1.13",
         "rakit/validation": "^1.1",
-        "sendgrid/sendgrid": "^7.2"
+        "sendgrid/sendgrid": "^7.2",
+        "swiftmailer/swiftmailer": "6.0"
     },
     "autoload": {
         "psr-4": {
